--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -50,6 +50,11 @@
     top: 6px;
 }
 
+@media (min-width: 0) and (max-width: 950px) {
+	.usa-search::after {
+		left: 90%; 
+}
+
 .search-feature .usa-button, .search-feature .usa-button-primary, .search-feature .usa-button:visited, .search-feature .usa-button-primary:visited, .search-feature button, .search-feature [type="button"], .search-feature [type="submit"], .search-feature [type="reset"], .search-feature [type="image"] {
 	font-size: 1.2rem;
 }
